fluent-syntax/test/fixtures_behavior/bar.ftl
bar = Bar {
//~ ERROR E0004, pos 11, args "a-zA-Z"
